# Checkers

./: CMakeLists.txt  README.md
.github/workflows/: build-and-release.yml  build.yml  release.yml
android/: AndroidManifest.xml
i18n/: Checkers_en.ts  Checkers_fr.ts
include/: aiplayer.h  audiolevelmonitor.h  helper.h
qml/: AboutPage.qml  AboutPopup.qml  Board.qml  DonatePopup.qml  GameOverPopup.qml  GamePage.qml  Main.qml  Piece.qml  RulesPopup.qml  ScrollingArea.qml  SettingsPage.qml  SettingsPopup.qml  SplashScreen.qml
qml/Pages/: EasterEGGPage.qml  GamePage.qml  RulesPage.qml  SettingsPage.qml  SplashPage.qml
qml/Singletons/: AIPlayer.qml  AudioEngine.qml  GameLogic.qml  UserSettings.qml
resources/fonts/: fonts.qrc
resources/icons/: icons.qrc
resources/images/: images.qrc
resources/sounds/: sounds.qrc
resources/textures/: textures.qrc
src/: aiplayer.cpp  audiolevelmonitor.cpp  helper.cpp  main.cpp  version.h.in
tools/: installer.iss
